Neuer Chat. W2W1 Kippdarstellung Versuch

--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
       --gruen:   rgb(0, 166, 82);
       --orange:  rgb(249, 150, 30);
 
-      /* echtes 8×8 ohne Zwischenräume */
       --cell-gap: 0px;
       --cell-radius: 0px;
 
       --floor: #7a4a34;
 
-      /* Holz */
       --cube-wood-base: #d7c2a4;
       --cube-wood-deep: #c9b08f;
       --cube-wood-warm: rgba(155, 70, 110, 0.10);
       --cube-wood-gold: rgba(249, 150, 30, 0.10);
 
-      /* W1 Innenrahmen (Gamma-Rand) */
       --w1-innerframe: rgba(122, 74, 52, 1);
 
       --slot-border: rgba(0,0,0,0.55);
@@ -103,6 +100,7 @@
         3px 6px 16px rgba(0,0,0,0.35);
     }
 
+    /* Raster */
     .grid{
       position:absolute;
       inset:0;
@@ -126,11 +124,25 @@
     .c-violett{ background: var(--violett); }
     .c-blau  { background: var(--blau);   }
 
-    /* jedes Farbfeld bekommt 2px Innenrahmen (optisch 4px zwischen zwei Farbfeldern) */
     .cell.colorCell{
       box-shadow:
         inset 0 0 0 2px #000,
         0 0 0 1px rgba(0,0,0,0.25);
+    }
+
+    /* =========================================================
+       BOX-GRUPPE: alles im Inneren (Floor, Ball, W1 Bitmaps)
+       -> hier kommt die horizontale 50%-Skalierung drauf
+       ========================================================= */
+    .boxGroup{
+      position:absolute;
+      inset:0;
+      z-index: 2; /* über Raster */
+      pointer-events:none;
+
+      /* ✅ horizontal 50% skalieren */
+      transform: scaleX(0.5);
+      transform-origin: 50% 50%;
     }
 
     .floor{
@@ -139,16 +151,11 @@
       top:  var(--step);
       width: calc(6 * var(--cell) + 5 * var(--cell-gap));
       height: calc(6 * var(--cell) + 5 * var(--cell-gap));
-
       background:
         linear-gradient(135deg, rgba(255,255,255,0.18), rgba(0,0,0,0.06)),
         var(--floor);
-
       border-radius: 0;
-      z-index: 2;
-      pointer-events: none;
 
-      /* KEIN schwarzer Innenrahmen am Boxboden */
       box-shadow:
         inset 18px 18px 34px rgba(255,255,255,0.10),
         inset -22px -22px 44px rgba(0,0,0,0.28),
@@ -171,22 +178,19 @@
         radial-gradient(circle at 55% 60%, rgba(0,0,0,0.18), rgba(0,0,0,0.00) 55%),
         radial-gradient(circle at 50% 55%, #d6b996, #b88d63 70%);
       box-shadow: 0 3px 6px rgba(0,0,0,0.28);
-      z-index: 4;
-      pointer-events: none;
+      z-index: 3;
     }
 
     /* ==========================
-       W1 (Q0) – sichtbar
+       W1 (DOM-Quelle fürs Rendern)
        ========================== */
-
     .w1Layer{
       position:absolute;
       inset:0;
-      z-index: 5; /* über Floor, unter Ball */
+      z-index: 4;
       pointer-events:none;
     }
 
-    /* Schattenelement unter W1 – nur nach Osten + Süden */
     .w1Shadow{
       position:absolute;
       left: calc(1 * var(--step));  /* 2B */
@@ -206,10 +210,10 @@
       position:absolute;
       left: calc(1 * var(--step));  /* 2B */
       top:  calc(1 * var(--step));  /* 2B */
-      width: calc(3 * var(--cell) + 2 * var(--cell-gap)); /* bis 4D */
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       box-sizing: border-box;
-      border-radius: 0; /* scharfkantig */
+      border-radius: 0;
 
       background:
         radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
@@ -224,7 +228,6 @@
         linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
         linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
 
-      /* Innenrahmen, ohne Vergrößerung */
       box-shadow:
         inset 0 0 0 2px var(--w1-innerframe),
         0 0 0 1px rgba(255,255,255,0.08) inset;
@@ -269,10 +272,6 @@
       user-select:none;
     }
 
-    /* ==========================
-       TYPO: Optik/Kerning
-       ========================== */
-
     .slot .num > span{
       display:inline-flex;
       align-items:center;
@@ -280,32 +279,24 @@
 
       font-weight: 900;
       color: #111;
-      font-size: clamp(18px, 8vmin, 36px); /* dein Regler */
+      font-size: clamp(18px, 8vmin, 36px);
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
 
-      /* translate kommt VOR Rotation => Shift dreht mit */
       transform: rotate(var(--num-rot, 0deg)) translate(var(--opt-x, 0px), var(--opt-y, 0px));
       transform-origin: 50% 50%;
+
       position: relative;
     }
 
-    /* 7: optisch ein bisschen nach rechts (Shift dreht mit) */
     .slot .num > span[data-val="7"]{ --opt-x: 2px; }
-
-    /* 10: als Ganzes minimal nach links (Shift dreht mit) */
     .slot .num > span.num10{ --opt-x: -2px; }
-
-    /* 6 & 9: wegen dickem Punkt als Ganzes minimal nach links */
     .slot .num > span[data-val="6"],
-    .slot .num > span[data-val="9"]{
-      --opt-x: -2px;
-    }
+    .slot .num > span[data-val="9"]{ --opt-x: -2px; }
 
     .slot .num > span .d{
       display:inline-block;
       line-height: 1;
     }
-
     .slot .num > span.num11 .d + .d{ margin-left: -0.18em; }
     .slot .num > span.num10 .d + .d{ margin-left: -0.10em; }
 
@@ -328,93 +319,39 @@
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
     /* ==========================
-       KIP (W2–W1) Ansicht
+       BITMAPS (W1 flach als Bild)
        ========================== */
-
-    .kipLayer{
-      position:absolute;
-      inset:0;
-      z-index: 6; /* über W1, unter Ball */
-      pointer-events:none;
-
-      /* wichtigste Transformation: horizontal 50% stauchen */
-      transform: scaleX(0.5);
-      transform-origin: 50% 50%;
-    }
-
-    /* durchgehender Schatten auf Boxboden – an Zeilengrenze 4/5 */
-    .kipFloorShadow{
-      position:absolute;
-      left: var(--step); /* Floor links */
-      width: calc(6 * var(--cell) + 5 * var(--cell-gap)); /* Floor Breite */
-
-      /* ✅ Rastergrenze zwischen Row 4 und 5 (global im 8×8) */
-      top: calc(4 * var(--step));
-
-      height: calc(1 * var(--cell)); /* Schattenband (weich) */
-      transform: translateY(-0.20 * var(--cell));
-      background: linear-gradient(
-        180deg,
-        rgba(0,0,0,0.00),
-        rgba(0,0,0,0.32) 40%,
-        rgba(0,0,0,0.00)
-      );
-      filter: blur(0.6px);
-      opacity: 0.85;
-    }
-
-    /* KIP Cube Faces (Positionen Q0 / Q1) */
-    .kipCubeFace{
+    .w1Bitmap{
       position:absolute;
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      box-sizing: border-box;
-      border-radius: 0;
-
-      background:
-        radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
-        radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
-        repeating-linear-gradient(
-          20deg,
-          rgba(0,0,0,0.02) 0px,
-          rgba(0,0,0,0.02) 10px,
-          rgba(255,255,255,0.02) 10px,
-          rgba(255,255,255,0.02) 18px
-        ),
-        linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
-        linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
-
-      box-shadow:
-        inset 0 0 0 2px var(--w1-innerframe),
-        0 0 0 1px rgba(255,255,255,0.08) inset;
+      image-rendering: auto;
+      z-index: 5;
+      pointer-events:none;
     }
 
-    /* links: Q0 wie W1-Position (B..D) */
-    .kipLeftCube{ left: calc(1 * var(--step)); top: calc(1 * var(--step)); }
-    /* rechts: Q1 gespiegelt rüber (E..G) => +3 steps */
-    .kipRightCube{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
+    /* Q0 = links oben */
+    .w1Bitmap.q0{
+      left: calc(1 * var(--step));
+      top:  calc(1 * var(--step));
+    }
 
-    /* linke Cube-Optik gespiegelt (vertikale Spiegelachse) */
-    .kipMirror{
+    /* Q1 = rechts oben */
+    .w1Bitmap.q1{
+      left: calc(4 * var(--step));
+      top:  calc(1 * var(--step));
+    }
+
+    /* spiegeln (horizontal) */
+    .mirrorX{
       transform: scaleX(-1);
       transform-origin: 50% 50%;
     }
-
-    /* Slots für KIP rechts (Q1) */
-    .q1-4b{ left: calc(4 * var(--step)); top: calc(3 * var(--step)); }
-    .q1-3b{ left: calc(4 * var(--step)); top: calc(2 * var(--step)); }
-    .q1-2c{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
-    .q1-2d{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
-
-    /* ==========================
-       UI
-       ========================== */
 
     .controls{
       width: 100%;
       display:flex;
       justify-content:center;
-      gap: 10px;
       padding: 0 6px;
       margin-top: 18px;
     }
@@ -445,45 +382,34 @@
 <body>
   <div class="stage">
     <div class="board" id="board">
-      <div class="floor" aria-hidden="true"></div>
-      <div class="ball" aria-label="Kugel"></div>
+
+      <!-- Raster bleibt normal (NICHT skaliert) -->
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- W1 sichtbar (Q0) -->
-      <div class="w1Layer" id="w1Layer" aria-label="W1 (Q0) sichtbar">
-        <div class="w1Shadow" id="w1Shadow" aria-hidden="true"></div>
-        <div class="w1Cube" aria-label="W1 Würfelfläche"></div>
+      <!-- ✅ Alles Box-Innere + W1-Bitmaps wird gemeinsam scaleX(0.5) -->
+      <div class="boxGroup" id="boxGroup">
+        <div class="floor" aria-hidden="true"></div>
+        <div class="ball" aria-label="Kugel"></div>
 
-        <div class="slot w1-4b read-west"  data-w1="A1"><div class="num"><span></span></div></div>
-        <div class="slot w1-3b read-west"  data-w1="A2"><div class="num"><span></span></div></div>
-        <div class="slot w1-2c read-north" data-w1="A3"><div class="num"><span></span></div></div>
-        <div class="slot w1-2d read-north" data-w1="A4"><div class="num"><span></span></div></div>
-      </div>
+        <!-- Quelle für Bitmap (wird nach Rendern versteckt) -->
+        <div class="w1Layer" id="w1Layer" aria-label="W1 (Quelle)">
+          <div class="w1Shadow" aria-hidden="true"></div>
+          <div class="w1Cube" aria-label="W1 Würfelfläche"></div>
 
-      <!-- KIP Ansicht (W2–W1), initial unsichtbar -->
-      <div class="kipLayer" id="kipLayer" aria-label="W2–W1 Kippdarstellung" style="display:none;">
-        <!-- durchgehender Boden-Schatten -->
-        <div class="kipFloorShadow" aria-hidden="true"></div>
+          <div class="slot w1-4b read-west"  data-w1="A1"><div class="num"><span></span></div></div>
+          <div class="slot w1-3b read-west"  data-w1="A2"><div class="num"><span></span></div></div>
+          <div class="slot w1-2c read-north" data-w1="A3"><div class="num"><span></span></div></div>
+          <div class="slot w1-2d read-north" data-w1="A4"><div class="num"><span></span></div></div>
+        </div>
 
-        <!-- W2 links: gespiegelt, ohne Zahlen -->
-        <div class="kipCubeFace kipLeftCube kipMirror" aria-hidden="true"></div>
-        <div class="slot w1-4b read-west"  data-w2="B1"><div class="num"><span></span></div></div>
-        <div class="slot w1-3b read-west"  data-w2="B2"><div class="num"><span></span></div></div>
-        <div class="slot w1-2c read-north" data-w2="B3"><div class="num"><span></span></div></div>
-        <div class="slot w1-2d read-north" data-w2="B4"><div class="num"><span></span></div></div>
-
-        <!-- W1 rechts: ohne eigenen Schatten, mit Zahlen -->
-        <div class="kipCubeFace kipRightCube" aria-hidden="true"></div>
-        <div class="slot q1-4b read-west"  data-kipw1="C1"><div class="num"><span></span></div></div>
-        <div class="slot q1-3b read-west"  data-kipw1="C2"><div class="num"><span></span></div></div>
-        <div class="slot q1-2c read-north" data-kipw1="C3"><div class="num"><span></span></div></div>
-        <div class="slot q1-2d read-north" data-kipw1="C4"><div class="num"><span></span></div></div>
+        <!-- ✅ Ergebnis-Bilder (flach, nicht verrutschbar) -->
+        <img id="w1ImgQ1" class="w1Bitmap q1" alt="W1 Bild Q1" />
+        <img id="w1ImgQ0" class="w1Bitmap q0 mirrorX" alt="W1 Spiegelbild Q0 ohne Zahlen" />
       </div>
     </div>
 
     <div class="controls">
       <button id="btnBestuecken" class="btn">Würfel mischen</button>
-      <button id="btnToggleKip" class="btn">Kippansicht</button>
     </div>
   </div>
 
@@ -491,13 +417,10 @@
     const boardEl = document.getElementById("board");
     const grid = document.getElementById("grid");
     const btn = document.getElementById("btnBestuecken");
-    const btnToggleKip = document.getElementById("btnToggleKip");
 
     const w1Layer = document.getElementById("w1Layer");
-    const w1Shadow = document.getElementById("w1Shadow");
-    const kipLayer = document.getElementById("kipLayer");
-
-    let showKip = false;
+    const w1ImgQ1 = document.getElementById("w1ImgQ1");
+    const w1ImgQ0 = document.getElementById("w1ImgQ0");
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
@@ -567,8 +490,6 @@
     }
 
     const w1Spans = Array.from(document.querySelectorAll("[data-w1] .num > span"));
-    const kipW1Spans = Array.from(document.querySelectorAll("[data-kipw1] .num > span"));
-    const w2Spans = Array.from(document.querySelectorAll("[data-w2] .num > span"));
 
     function renderNumber(span, n){
       span.classList.remove("num10","num11");
@@ -589,65 +510,115 @@
       span.textContent = String(n);
     }
 
-    function clearSpan(span){
-      span.classList.remove("num10","num11","dot");
-      span.innerHTML = "";
-      span.textContent = "";
-      span.dataset.val = "";
-    }
-
-    function syncKipFromW1(values){
-      // rechte KIP-W1 bekommt exakt die gleichen Zahlen wie W1
-      kipW1Spans.forEach((sp, i) => {
-        const n = values[i];
-        renderNumber(sp, n);
-        setDot(sp, n);
-      });
-
-      // linke W2 verliert Zahlen
-      w2Spans.forEach(sp => clearSpan(sp));
-    }
-
     function setRandomNumbers(){
       const nums = getUniqueRandomNumbers(4, 0, 11);
-
-      // W1 setzen
       w1Spans.forEach((sp, i) => {
         const n = nums[i];
         renderNumber(sp, n);
         setDot(sp, n);
       });
-
-      // KIP synchron halten (auch wenn gerade nicht sichtbar)
-      syncKipFromW1(nums);
     }
 
-    function setView(isKip){
-      showKip = isKip;
+    /* =========================================================
+       W1 -> Bitmap (ein Bild, keine verrutschbaren Layer mehr)
+       ========================================================= */
 
-      if (showKip){
-        // Original W1 (mit Schatten) ausblenden, aber behalten
-        w1Layer.style.visibility = "hidden";
-        // KIP einblenden
-        kipLayer.style.display = "block";
-        // Schatten von W1 darf in KIP nicht vorkommen -> ist sowieso nur im Original-Layer
-        // Buttontext
-        btnToggleKip.textContent = "W1 Ansicht";
-      } else {
-        w1Layer.style.visibility = "visible";
-        kipLayer.style.display = "none";
-        btnToggleKip.textContent = "Kippansicht";
-      }
+    function escapeXml(str){
+      return str.replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;").replace(/"/g,"&quot;").replace(/'/g,"&apos;");
+    }
+
+    async function nodeToPngDataUrl(node, width, height){
+      // Node klonen, damit wir sauber serialisieren
+      const clone = node.cloneNode(true);
+
+      // Wichtig: keine IDs doppelt im DOM-Rest (nur im SVG)
+      clone.querySelectorAll("[id]").forEach(el => el.removeAttribute("id"));
+
+      // Wrapper: foreignObject braucht explizite Größe
+      const html = clone.outerHTML;
+
+      const svg =
+        `<svg xmlns="http://www.w3.org/2000/svg" width="${width}" height="${height}">
+          <foreignObject width="100%" height="100%">
+            <div xmlns="http://www.w3.org/1999/xhtml"
+                 style="width:${width}px;height:${height}px;">
+              ${html}
+            </div>
+          </foreignObject>
+        </svg>`;
+
+      const svgUrl = "data:image/svg+xml;charset=utf-8," + encodeURIComponent(svg);
+
+      const img = new Image();
+      img.decoding = "async";
+
+      const loaded = new Promise((resolve, reject) => {
+        img.onload = () => resolve();
+        img.onerror = reject;
+      });
+
+      img.src = svgUrl;
+      await loaded;
+
+      const canvas = document.createElement("canvas");
+      canvas.width = width;
+      canvas.height = height;
+      const ctx = canvas.getContext("2d");
+      ctx.clearRect(0,0,width,height);
+      ctx.drawImage(img, 0, 0, width, height);
+
+      return canvas.toDataURL("image/png");
+    }
+
+    async function rebuildW1Bitmaps(){
+      // 1) Größe vom W1-DOM (3x3 in deinem Raster)
+      const rect = w1Layer.getBoundingClientRect();
+      const w = Math.max(1, Math.round(rect.width));
+      const h = Math.max(1, Math.round(rect.height));
+
+      // 2) W1 MIT Zahlen -> Q1
+      const pngWithNumbers = await nodeToPngDataUrl(w1Layer, w, h);
+      w1ImgQ1.src = pngWithNumbers;
+
+      // 3) W1 OHNE Zahlen -> Q0 (gespiegelt per CSS)
+      // dafür: temporär clone bauen, Zahlen leeren, dann rendern
+      const temp = w1Layer.cloneNode(true);
+      temp.querySelectorAll(".num > span").forEach(sp => {
+        sp.className = "";     // dot/num10/num11 weg
+        sp.innerHTML = "";     // nix mehr
+        sp.textContent = "";   // sicher
+        sp.removeAttribute("data-val");
+      });
+
+      // temp kurz „aus dem Flow“ halten, aber renderbar
+      temp.style.position = "absolute";
+      temp.style.left = "-9999px";
+      temp.style.top = "-9999px";
+      temp.style.transform = "none";
+      document.body.appendChild(temp);
+
+      const pngNoNumbers = await nodeToPngDataUrl(temp, w, h);
+      w1ImgQ0.src = pngNoNumbers;
+
+      temp.remove();
+
+      // 4) Quelle verstecken: ab jetzt nur noch Bitmaps
+      w1Layer.style.display = "none";
+    }
+
+    async function rerollAndRebuild(){
+      // DOM wieder einblenden, damit wir daraus neu rendern können
+      w1Layer.style.display = "";
+      setRandomNumbers();
+
+      // warten bis Layout/Styles sicher stehen
+      await new Promise(r => requestAnimationFrame(() => requestAnimationFrame(r)));
+
+      await rebuildW1Bitmaps();
     }
 
     btn.addEventListener("click", () => {
-      setRandomNumbers();
-      // Optional: nach "mischen" im W1 bleiben (so wie du es beschrieben hast)
-      setView(false);
-    });
-
-    btnToggleKip.addEventListener("click", () => {
-      setView(!showKip);
+      rerollAndRebuild().catch(console.error);
     });
 
     window.addEventListener("load", () => {
@@ -656,13 +627,18 @@
       setTimeout(setBoardSquare, 80);
 
       buildGridOnce();
-      setRandomNumbers();
-      setView(false);
+
+      // Initial
+      rerollAndRebuild().catch(console.error);
     });
 
     window.addEventListener("resize", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
+
+      // bei Resize neu rendern, weil Pixelgröße der Bitmaps sonst nicht mehr passt
+      // (damit NICHT unscharf skaliert wird)
+      rerollAndRebuild().catch(console.error);
     });
   </script>
 </body>
